--- a/pokedex/src/app/component/card-pokemon/card-pokemon.component.scss
+++ b/pokedex/src/app/component/card-pokemon/card-pokemon.component.scss
@@ -5,60 +5,70 @@
 
 .card {
     width: 90%;
-    height: 90%;
+    height: 100%;
     border-radius: 10%;
+    margin: 5px auto;
+    border: 1px solid rgb(75, 73, 73);
     position: relative;
-    margin: 10px auto;
+}
+
+.header {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 10px;
 }
 
 .pokemon-name {
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
-    position: absolute;
-    top: 15%;
-    left: 30%;
-    transform: translate(-50%, -50%);
     color: #fff;
 }
 
 .pokemon-number {
     font-weight: bold;
-    position: absolute;
-    top: 15%;
-    right: 0%;
-    transform: translate(-30%, -50%);
     font-size: 1.1rem;
     color: #02a37e;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.types {
+.body {
+    display: flex;
     position: absolute;
+    width: 90%;
+    bottom: 5px;
+    justify-content: space-between;
+    align-items: center;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+
+.types {
     bottom: 20px;
-    width: 50%;
+    width: 60%;
     height: 45%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    
 }
 
 .types > p {
-    width: 70%;
+    width: auto;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: 500;
+    font-weight: 400;
+    color: #fff;
+    font-size: 15px;
     border-radius: 10px;
-    padding: 2px;
+    padding: 5px;
     margin: 2px;
     text-align: center;
-    color: #fff;
+    border: 1px solid #ccc;
 }
 
-.card > img {
+.card >.body> img {
     display: block;
     width: 55%;
-    height: 75%;
-    position: absolute;
-    bottom: 0%;
-    right: 0%;
 }
