--- a/pokedex/src/app/home/home.page.scss
+++ b/pokedex/src/app/home/home.page.scss
@@ -1,9 +1,17 @@
-.main-container {
-  display: grid;
-  width: 100%;
-  height: 100vh;
-  grid-template-columns: 1fr 1fr;
-  grid-auto-rows: 23%;
-  grid-gap: 5px 5px;
-  position: relative;
+ion-infinite-scroll-content {
+  margin: auto !important;
+}
+
+ion-col {
+  height: 20vh;
+}
+
+ion-content {
+  --background: #f2f2f2;
+}
+
+@media (orientation: landscape) {
+  ion-col {
+    height: 30vh;
+  }
 }
