--- a/pokedex/src/app/component/card-pokemon/card-pokemon.component.html
+++ b/pokedex/src/app/component/card-pokemon/card-pokemon.component.html
@@ -1,4 +1,4 @@
-<div [routerLink]="['biopokemon']" class="card" [style.background]="getColorPokemon()">
+<div [routerLink]="['biopokemon']" class="card ripple-parent fadeIn" [style.background]="getColorPokemon()">
   <section class="header">
     <p class="pokemon-name ion-text-capitalize">{{ pokemon.name }}</p>
     <p class="pokemon-number">#{{ pokemon.id }}</p>
