--- a/pokedex/src/app/pages/home/home.page.scss
+++ b/pokedex/src/app/pages/home/home.page.scss
@@ -15,3 +15,14 @@ ion-content {
     height: 30vh;
   }
 }
+.alert-warning {
+  width: 100%;
+  height: 5vh;
+  background: #fff3cd;
+  margin: auto;
+  border: 1px solid #ffe89b;
+  border-radius: 5px;
+  text-align: center;
+  line-height: 25px;
+  color: black;
+}
