--- a/pokedex/src/global.scss
+++ b/pokedex/src/global.scss
@@ -16,7 +16,7 @@
 @import "~@ionic/angular/css/normalize.css";
 @import "~@ionic/angular/css/structure.css";
 @import "~@ionic/angular/css/typography.css";
-@import '~@ionic/angular/css/display.css';
+@import "~@ionic/angular/css/display.css";
 
 /* Optional CSS utils that can be commented out */
 @import "~@ionic/angular/css/padding.css";
@@ -25,8 +25,20 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+* {
+  box-sizing: border-box;
+}
 
+.fadeIn {
+  animation: fadeInA ease-in-out 0.5s;
+}
 
-*{
-    box-sizing: border-box;
+@keyframes fadeInA {
+
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
