--- a/HeroesAppV2/src/app/app.component.html
+++ b/HeroesAppV2/src/app/app.component.html
@@ -1,5 +1,4 @@
 <app-navbar></app-navbar>
 <div class="container">
-  <app-home></app-home>
-  <app-heroes></app-heroes>
+  <router-outlet></router-outlet>
 </div>
