--- a/HeroesAppV2/src/app/components/heroes/heroes.component.html
+++ b/HeroesAppV2/src/app/components/heroes/heroes.component.html
@@ -1,38 +1,16 @@
 <div class="mt-2">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-          <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
+  <div class="loading" *ngIf="loading">
+    <mat-spinner></mat-spinner>
+  </div>
+    <div class="row row-cols-1 row-cols-md-3 g-4 mt-2 fadeIn" *ngIf="!loading">
+        <div class="col" *ngFor="let heroe of heroesList">
+          <div class="card h-100 cursor" [routerLink]="['/viewhero', heroe.nombre]">
+            <img [src]="heroe.img" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h2 class="card-title">{{heroe.nombre}}</h2>
             </div>
             <div class="card-footer">
-              <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">Last updated 3 mins ago</small>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">Last updated 3 mins ago</small>
+              <small class="text-muted">Fecha de aparición: {{heroe.aparicion}}</small>
             </div>
           </div>
         </div>
