--- a/HeroesAppV2/src/app/shared/navbar/navbar.component.html
+++ b/HeroesAppV2/src/app/shared/navbar/navbar.component.html
@@ -1,16 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Heroes App</a>
+    <a class="navbar-brand">HeroesApp</a>
     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-between" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
+            <li class="nav-item active" (click)="goToRoute(['home'])">
+                <a class="nav-link" >Home</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+            <li class="nav-item" (click)="goToRoute(['heroes'])">
+                <a class="nav-link" >Heroes</a>
+            </li>
+            <li class="nav-item" (click)="goToRoute(['aboutus'])">
+                <a class="nav-link" >About Us</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
