--- a/HeroesAppV2/src/app/components/view-hero/view-hero.component.html
+++ b/HeroesAppV2/src/app/components/view-hero/view-hero.component.html
@@ -15,10 +15,10 @@
 <div class="loading" *ngIf="loading">
   <mat-spinner></mat-spinner>
 </div>
-<div class="container mt-5 fadeIn" *ngFor="let heroe of heroesList">
+<div class="container mt-5 fadeIn">
   <mat-card class="example-card">
     
-    <img mat-card-image [src]="heroe.img"/>
+    <img mat-card-image [src]="heroe?.img"/>
   </mat-card>
   <mat-card class="example-card">
     <mat-card-content>
@@ -26,18 +26,18 @@
         <img
           mat-card-avatar
           class="example-header-image"
-          [src]="heroe.img"
+          [src]="heroe?.img"
         />
-        <mat-card-title>{{ heroe.nombre }}</mat-card-title>
+        <mat-card-title>{{ heroe?.nombre }}</mat-card-title>
         <mat-card-subtitle>Super-Hero</mat-card-subtitle>
       </mat-card-header>
       <br>
       <br>
-        <p class="negrita">Biografía:</p> <p> {{ heroe.bio }}</p>
+        <p class="negrita">Biografía:</p> <p> {{ heroe?.bio }}</p>
         <br>
-        <p class="negrita">Fecha de aparición:</p> <p> {{ heroe.aparicion }}</p>
+        <p class="negrita">Fecha de aparición:</p> <p> {{ heroe?.aparicion }}</p>
         <br>
-        <p class="negrita">Casa:</p> <p> {{ heroe.casa }}</p>
+        <p class="negrita">Casa:</p> <p> {{ heroe?.casa }}</p>
       </mat-card-content>
       <mat-card-actions>
         <button mat-button [routerLink]="['/heroes']">VOLVER</button>
