--- a/HeroesAppV2/src/app/shared/navbar/navbar.component.html
+++ b/HeroesAppV2/src/app/shared/navbar/navbar.component.html
@@ -17,9 +17,15 @@
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search">
+            <input [formControl]="searchControl" [matAutocomplete]="auto" class="form-control mr-sm-2" type="search" placeholder="Search">
+            <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+              <mat-option *ngFor="let option of filteredOptions" [value]="option">
+                {{option}}
+              </mat-option>
+            </mat-autocomplete>
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
+        
         
     </div>
 </nav>
