--- a/TiendaDeGorrasApp/src/app/components/navbar/navbar.component.html
+++ b/TiendaDeGorrasApp/src/app/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
         class="input-search border-0"
         placeholder="Buscar..."
       />
-      <img class="lupa-icon" src="./../../../assets/lupa-icon.jpg" alt="" />
+      <img class="lupa-icon" src="./../../../assets/img/lupa-icon.jpg" alt="" />
     </li>
     <li class="item-navbar carrito">
       <p class="item">Carrito</p>
@@ -23,7 +23,7 @@
     </li>
     <li class="item-navbar">
       <div class="login">
-        <img src="./../../../assets/icono-login.png" alt="" class="icon-login" />
+        <img src="./../../../assets/img/icono-login.png" alt="" class="icon-login" />
       <p class="item">Login</p>
       </div>
     </li>
