--- a/TiendaDeGorrasApp/src/app/shared/footer/footer.component.html
+++ b/TiendaDeGorrasApp/src/app/shared/footer/footer.component.html
@@ -1,3 +1,37 @@
 <div class="container-footer">
-    
+    <div class="footer-superior">
+        <div class="footer-superior-menu cont-footer">
+            <div class="menu-footer">
+                <a href="" class="link-footer">Tienda</a>
+                <a href="" class="link-footer">Distribuciones</a>
+                <a href="" class="link-footer">Blog</a>
+                <a href="" class="link-footer">Nosotros</a>
+                <a href="" class="link-footer">Contacto</a>
+            </div>
+            <div class="menu-footer">
+                <a href="" class="link-footer">Preguntas frecuentes</a>
+                <a href="" class="link-footer">Envíos y devoluciones</a>
+                <a href="" class="link-footer">Políticas de la tienda</a>
+                <a href="" class="link-footer">Métodos de pago</a>
+            </div>
+        </div>
+        <div class="footer-superior-contact cont-footer">
+            <div class="subs-footer">
+                <label class="subs-label" for="">Introduce tu email aquí*</label>
+                <div><input type="text"><button>Subscribirme</button></div>
+            </div>
+            <div class="redes-footer">
+                <img class="img-redes" src="./../../../assets/img/redes/facebook-icon.jpg" alt="">
+                <img class="img-redes" src="./../../../assets/img/redes/instagram-icon.jpg" alt="">
+                <img class="img-redes" src="./../../../assets/img/redes/pinterest-icon.jpg" alt="">
+                <img class="img-redes" src="./../../../assets/img/redes/youtube-icon.jpg" alt="">
+                <img class="img-redes" src="./../../../assets/img/redes/twitter-icon.jpg" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="footer-inferior">
+        <div class="copyright">
+            <p>© 2021 Creado por Ignacio Garcia Reyna tomando de base una plantilla de Wix.com</p>
+        </div>
+    </div>
 </div>
