--- a/TiendaDeGorrasApp/src/app/shared/navbar/navbar.component.css
+++ b/TiendaDeGorrasApp/src/app/shared/navbar/navbar.component.css
@@ -9,7 +9,7 @@
   width: 100%;
   height: 70px;
   top: 0;
-  z-index: 99;
+  z-index: 9;
   overflow: hidden;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -21,7 +21,7 @@
   width: 100%;
   height: 9vh;
   bottom: 0;
-  z-index: 99;
+  z-index: 9;
   overflow: hidden;
   display: flex;
   flex-direction: row;
@@ -101,16 +101,16 @@
 }
 
 .login {
-  border: solid black 2px;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
   width: 70px;
+  height: 29px;
 }
 
 .icon-login {
-  height: 19px;
+  height: 70%;
 }
 
 p {
@@ -128,8 +128,7 @@ p {
   background: black;
   margin-left: 5px;
   color: white;
-  height: 25px;
-  width: 25px;
+  width: 19px;
   border-radius: 100%;
 }
 
@@ -149,9 +148,12 @@ p {
 
   .items-navbar{
     grid-template-columns: 25vw 25vw 25vw 25vw;
+    margin-left: 10px;
   }
 
   .input-search {
     width: 17vw;
   }
+
+
 }
