--- a/TiendaDeGorrasApp/src/app/shared/navbar/navbar.component.html
+++ b/TiendaDeGorrasApp/src/app/shared/navbar/navbar.component.html
@@ -7,7 +7,6 @@
     </div>
   </div>
 
-
   <ul class="items-navbar">
     <li class="item-navbar search">
       <input
@@ -23,16 +22,29 @@
     </li>
     <li class="item-navbar">
       <div class="login">
-        <img src="./../../../assets/img/icono-login.png" alt="" class="icon-login" />
-      <p class="item">Login</p>
+        <p class="item">Login</p>
+        <img
+          src="./../../../assets/img/icono-login.png"
+          alt=""
+          class="icon-login"
+        />
       </div>
     </li>
-    <li class="item-navbar tres-lineas">
-      <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+    <li class="item-navbar tres-lineas" (click)="toggleSidebar()">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="50"
+        height="50"
+        fill="currentColor"
+        class="bi bi-list"
+        viewBox="0 0 16 16"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"
+        />
       </svg>
     </li>
   </ul>
 </nav>
-<div class="botton-navbar">
-</div>
+<div class="botton-navbar"></div>
