Se agregaron componentes y navegación a TiendaDeGorrasApp

--- a/TiendaDeGorrasApp/src/app/components/home/home.component.html
+++ b/TiendaDeGorrasApp/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
     <p class="tittle-home">NUNCA DEJES</p>
     <p class="tittle-home">DE SER ORIGINAL</p>
     <p class="subtittle-home">DESCUBRE NUESTRAS NOVEDADES</p>
-    <button class="button-home">COMPRAR</button>
+    <button class="button-home" (click)="goToRoute(['tienda'])">COMPRAR</button>
   </div>
   <div class="tienda">
     <div class="contenedor-tittle-tienda">
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="contenedor-vertodo">
-      <button class="button-home">Ver todo</button>
+      <button class="button-home" (click)="goToRoute(['tienda'])">Ver todo</button>
     </div>
   </div>
   <div class="contenedor-instagram">
