--- a/FormsPractice/src/app/components/home/home.component.html
+++ b/FormsPractice/src/app/components/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div class="container mt-3">
+    <h1>Bienvenid@ al formulario de Deudor/Codeudor</h1>
+    <div class="d-grid gap-2 col-6 mx-auto mt-5">
+        <button class="btn btn-primary" type="button" (click)="goToRoute(['deudor'])">Formulario deudor</button>
+        <button class="btn btn-primary" type="button" (click)="goToRoute(['codeudor'])">Formulario codeudor</button>
+      </div>
+</div>
