--- a/FormsPractice/src/styles.css
+++ b/FormsPractice/src/styles.css
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+.form-label {
+    font-weight: bold;
+  }
+  
+  form {
+    border: 1px solid black;
+    border-radius: 0.25rem;
+    padding-bottom: 3rem;
+  }
+  
