--- a/FormsPractice/src/app/components/home/home.component.html
+++ b/FormsPractice/src/app/components/home/home.component.html
@@ -4,4 +4,5 @@
         <button class="btn btn-primary" type="button" (click)="goToRoute(['deudor'])">Formulario deudor</button>
         <button class="btn btn-primary" type="button" (click)="goToRoute(['codeudor'])">Formulario codeudor</button>
       </div>
+      <app-deudor-register-list></app-deudor-register-list>
 </div>
